@@ -1,3 +1,6 @@
+# [Unreleased]
+  - Raise DecodingError and EncodingError for invalid strings
+
 # 1.7.2
   - Fix typespec of enum encode function (thanks to https://github.com/wingyplus)
 
